# citybike

./: .gitignore  README.md  requipments.md
backend/: Cargo.toml  README.md
backend/src/: error.rs  lib.rs  main.rs
backend/src/api/: journey_api.rs  mod.rs  station_api.rs
backend/src/controllers/: journey_controller.rs  mod.rs  station_controller.rs
backend/src/models/: journey.rs  mod.rs  station.rs
backend/src/utils/: csv_reader.rs  macros.rs  mod.rs  try_froms.rs
frontend/: README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/__tests__/: formatters.test.tsx  journeypage.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/journeys/: columns.tsx  page.tsx
frontend/app/stations/: colunms.tsx  page.tsx
frontend/app/stations/[slug]/: page.tsx
frontend/components/ui/: navbar.tsx
frontend/src/app/: page.tsx
