[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.1"
chrono = {version = "0.4.24", features = ["serde"]}
serde = {version = "1.0.159", features =["derive"]}
serde_derive = "1.0"
anyhow = "1.0"
surrealdb = {version="1.0.0-beta.9+20230402", features=["kv-rocksdb"]}
tokio = {version="1.28.0", features=["full"]}
thiserror = "1"
futures = "0.3"
